--- a/kafka/resources/docker-compose.yaml
+++ b/kafka/resources/docker-compose.yaml
@@ -6,6 +6,40 @@
 version: '2'
 
 services:
+  ca.org1.example.com:
+    image: hyperledger/fabric-ca:x86_64-1.1.0
+    restart: always
+    container_name: ca.org1.example.com
+    hostname: ca.org1.example.com
+    environment:
+      - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
+      - FABRIC_CA_SERVER_TLS_ENABLED=${FABRIC_TLS_ENABLED} # change to false to disable TLS
+      - FABRIC_CA_SERVER_CA_NAME=ca-org1
+      - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org1.example.com-cert.pem
+      - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/5bca2ac5f9de02f791826319b76a3469f62f4495d2a89b4265f5caeb87b8e5a3_sk
+    ports:
+      - "7054:7054"
+    volumes:
+      - ./crypto-config/peerOrganizations/org1.example.com/ca/:/etc/hyperledger/fabric-ca-server-config
+    command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca.org1.example.com-cert.pem --ca.keyfile /etc/hyperledger/fabric-ca-server-config/5bca2ac5f9de02f791826319b76a3469f62f4495d2a89b4265f5caeb87b8e5a3_sk -b admin:adminpw -d'
+
+  ca.org2.example.com:
+    image: hyperledger/fabric-ca:x86_64-1.1.0
+    restart: always
+    container_name: ca.org2.example.com
+    hostname: ca.org2.example.com
+    environment:
+      - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
+      - FABRIC_CA_SERVER_TLS_ENABLED=${FABRIC_TLS_ENABLED} # change to false to disable TLS
+      - FABRIC_CA_SERVER_CA_NAME=ca-org2
+      - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org2.example.com-cert.pem
+      - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/bede381e914aa71005a3a95a62e7dccaea2943c731d7a5663d8b4629195ca73f_sk
+    ports:
+      - "8054:7054"
+    volumes:
+      - ./crypto-config/peerOrganizations/org2.example.com/ca/:/etc/hyperledger/fabric-ca-server-config
+    command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca.org2.example.com-cert.pem --ca.keyfile /etc/hyperledger/fabric-ca-server-config/bede381e914aa71005a3a95a62e7dccaea2943c731d7a5663d8b4629195ca73f_sk -b admin:adminpw -d'
+
   zookeeper0:
     container_name: zookeeper0
     extends:
@@ -142,7 +176,7 @@ services:
       - CORE_PEER_ID=cli
       - CORE_PEER_ADDRESS=peer0.org1.example.com:7051
       - CORE_PEER_LOCALMSPID=Org1MSP
-      - CORE_PEER_TLS_ENABLED=true
+      - CORE_PEER_TLS_ENABLED=${FABRIC_TLS_ENABLED}
       - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls/server.crt
       - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls/server.key
       - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls/ca.crt
@@ -150,9 +184,9 @@ services:
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     volumes:
         - /var/run/:/host/var/run/
-        - ./examples/go/:/opt/gopath/src/github.com/hyperledger/fabric/examples/chaincode/go
-        - ./crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
-        - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
+        - ./examples/chaincode/go/:/opt/gopath/src/github.com/hyperledger/fabric/examples/chaincode/go:ro
+        - ./crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/:ro
+        - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts:ro
     depends_on:
       - orderer.example.com
       - peer0.org1.example.com
